Добавлены CRUD функции для конвертов + вспомогательные функции helper js
